--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h2>PENJELASAN SINGKAT</h2>
         <p>Prim's Algorithm bekerja dengan cara berikut:</p>
         <ul>
-            <li><p>Mulai dari satu simpul: <br>Pilih simpul awal secara arbitrer dan tandai sebagai bagian dari MST.</p></li>
+            <li><p>Mulai dari satu simpul: <br>Pilih simpul awal manapun dan tandai sebagai bagian dari MST.</p></li>
             <li><p>Ekspansi: <br>Temukan tepi dengan bobot terkecil yang menghubungkan simpul yang sudah ada di MST dengan simpul yang belum ada.</p></li>
             <li><p>Tambahkan tepi: <br>Tambahkan tepi tersebut dan simpul yang terhubung ke MST.</p></li>
             <li><p>Ulangi: <br>Ulangi langkah 2 dan 3 sampai semua simpul termasuk dalam MST</p></li><br>
